--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -13,8 +13,10 @@
 
     {% include 'base/navbar.html' %}
 
+    <div class="container-fluid">
     {% block content %}
     {% endblock %}
+    </div>
     
     {% include 'base/js.html' %}
   
